# FiducialMarkers

./: .gitignore  README.md
comparator/: CMakeLists.txt  build.sh  measurements.json  mount.md  mount.txt  multimodal.csv  position.csv  position.py  residuals.txt  single_modal_refine.csv  uncrustify.cfg
comparator/analysis/: plot_residuals.py  vicon_analysis.py
comparator/comparator/: CMakeLists.txt  compile.out  mount.txt  position.py  residuals.txt
comparator/comparator/analysis/: depth_comparison.py  extrinsics_analysis.py  measurement_analysis.py  plot_residuals.py  vicon_analysis.py
comparator/comparator/include/comparator/: april_algo.hpp  aruco_algo.hpp  camera.hpp  chessboard.hpp  chessboard_algo.hpp  eigen_json.hpp  eink.hpp  extrinsic_calibration.hpp  extrinsic_observation.hpp  hand_error_cost_function.hpp  measurement.hpp  measurement_algo_interface.hpp  measurement_runner.hpp  mount.hpp  mount_error_cost_function.hpp  mrcal_reprojected_camera.hpp  realsense_camera_impl.hpp  scaled_camera.hpp  tracked_object.hpp  vicon.hpp
comparator/comparator/index/: DataStreamClient.h.A0ED3667BFF12FB1.idx  IDataStreamClientBase.h.D0EEF28CC1ACE454.idx  calibrate_extrinsics.cpp.498EBB811F7CAB26.idx  camera.hpp.EC2CD13A9AE201DA.idx  camera_camera_cost_function.hpp.998F6DDF21298FEC.idx  chessboard.cpp.F7AE92C19C3F35E9.idx  chessboard.hpp.F979134A45E106F1.idx  chessboard_test.cpp.7BAA479BC36C7B7F.idx  client.cpp.D7DB4344727ECD8E.idx  eigen_json.hpp.E03C7BBE58CFF360.idx  extrinsic_calibration.cpp.C24EDB317AB97BDD.idx  extrinsic_calibration.hpp.0B9EF56DB34571E3.idx  extrinsic_ceres_cost_function.hpp.51F63A432B57BF2A.idx  extrinsic_observation.cpp.FAB76E7202F14CED.idx  extrinsic_observation.hpp.BE2839EEE75A75EE.idx  hand_error_cost_function.hpp.B662FF1A35B46C04.idx  measurement.cpp.AECE9AE7CF80DE09.idx  measurement.hpp.D3BE9E3CD31F0135.idx  measurement_runner.cpp.1FBE677350C35103.idx  measurement_runner.hpp.6891CD1DA1AC5A20.idx  mount.cpp.E40E06CC2763EB3B.idx  mount.hpp.B40E8CD5D6F081B9.idx  mount_error_cost_function.hpp.6DB858513B80C147.idx  mrcal_reprojected_camera.cpp.073B4637BD0EBF96.idx  mrcal_reprojected_camera.hpp.C7A491BDBB5F0337.idx  realsense_camera_impl.hpp.2DCE93C0BF87FDB6.idx  reprojection_cost_function.hpp.85A5A14099D29C11.idx  tracked_object.cpp.FF9211A360068034.idx  tracked_object.hpp.AFE199AAFB90184C.idx  vicon.cpp.EC2907C338C1E259.idx  vicon.hpp.05B241E39E9D3AB8.idx
comparator/comparator/src/: calibrate_extrinsics.cpp  chessboard.cpp  chessboard_test.cpp  extrinsic_calibration.cpp  extrinsic_observation.cpp  measurement.cpp  measurement_runner.cpp  mount.cpp  mrcal_reprojected_camera.cpp  realsense_depth_test.cpp  scaled_camera.cpp  take_measurements.cpp  tracked_object.cpp
comparator/data/: camera_still1.json  camera_still2.json  camera_still3.json  camera_still_all.json  extrinsics.json
comparator/include/comparator/: camera.hpp  camera_camera_cost_function.hpp  chessboard.hpp  eigen_json.hpp  extrinsic_calibration.hpp  extrinsic_ceres_cost_function.hpp  extrinsic_observation.hpp  hand_error_cost_function.hpp  measurement.hpp  mount.hpp  mount_error_cost_function.hpp  mrcal_reprojected_camera.hpp  realsense_camera_impl.hpp  reprojection_cost_function.hpp  tracked_object.hpp  vicon.hpp
comparator/pi_eink/: CMakeLists.txt  pi_eink-config.cmake.in
comparator/pi_eink/IT8951-ePaper/Config/: DEV_Config.c  DEV_Config.h  dev_hardware_SPI.c
comparator/pi_eink/IT8951-ePaper/e-Paper/: EPD_IT8951.c  EPD_IT8951.h
comparator/pi_eink/include/pi_eink/: api.hpp  april_tags.hpp  aruco.hpp  chessboard.hpp  client.hpp  drawing_utils.hpp  epaper.hpp  fiducial.hpp  image.hpp
comparator/pi_eink/src/: april_tags.cpp  aruco_tags.cpp  chessboard.cpp  client.cpp  client_test.cpp  drawing_utils.cpp  eink_cli.cpp  epaper.cpp  image.cpp  server.cpp  test.cpp
comparator/src/: calibrate_extrinsics.cpp  chessboard.cpp  chessboard_test.cpp  client.cpp  extrinsic_calibration.cpp  extrinsic_observation.cpp  measurement.cpp  mount.cpp  mrcal_reprojected_camera.cpp  tracked_object.cpp  vicon.cpp
creator/: README.md  creator.py  mount.py  mount.txt  pyvenv.cfg  renderer.py  tags.py
creator/opencv/: gen_pattern.py  svgfig.py
rsapriltag/: CMakeLists.txt  analysis.py
rsapriltag/include/rsapriltag/: multicam_refine_cost_funcion.hpp  ncam_pnp.hpp  tagCustom20h10.h
rsapriltag/src/: main.cpp  ncam_pnp.cpp  tagCustom20h10.c
